dev.opensnowmap.org/main.css
body{
    margin:0px;
    overflow:hidden;
    padding:0px;
    font-family:'Open Sans', sans-serif;
    font-size: 1em;
    font-weight: 400;
    width: 100%; height:100%;
    color: #202020
   }
h1{
       font-family:sans-serif;
       font-size: 1.1em;
       font-weight: 300;
       letter-spacing: 0.1ex;
       border:0;
       padding: 0px;
       margin:0
   }
a:link, a:visited {
        color: #5ca5ff;
        text-decoration: none;
        font-weight: 400;
        margin: 0px
    }
    
a:hover {
        color: #FF7800;
        text-decoration: none;
        font-weight: 600;
        margin: 0px
    }
a.amenu:link, a.amenu:visited {
		font-weight: 600;
		color: #444444;
		font-size: 1em;
        text-decoration: none;
        margin: 0px
    }
    
a.amenu:hover {
        color: #FF7800;
		font-size: 1em;
        text-decoration: none;
        font-weight: 600;
        margin: 0px
    }
li{
list-style-position:outside;
list-style-type:disc;
}
hr{border: 0; width: 90%; height: 1px; color: #AAAAAA; background-color: #AAAAAA}
.hrmenu{border: 0; width: 90%; height: 1px; color: #AAAAAA; background-color: #AAAAAA}
td {
        border:0px solid grey;
        margin: 0px;
        padding:0px
}
select, option{
        background-color: #FFFFFF;
        width: 100px;
        font-size: 0.9em;
        border: 1px solid #CCCCCC;
        text-align: left;
        margin-left: 20px
}

.radio{
        margin: 0 0 0 5px;
        padding: 0;
        border: 0;
        vertical-align:middle;
        }
label {
        padding:0;
        font-size: 0.9em
    }

.clear { clear: both}
/*use to place divs side by side*/

.float-right{
    float:right
}
.float-left{
    float:left
}
#map {
        position: fixed;    width: 100%; height:100%;
        top: 0px;
        left: 0px;
        border: 0px;
        padding: 0px;
     }
#control{
        position: absolute;
        width:100px;
        height: 22px;
        top: 5px;
        right: 5px;
       vertical-align: middle;
       text-align: center;
        overflow:hidden;
        -moz-border-radius:10px;
        border-radius:10px;
        border: 1px solid #CCCCCC;
        background-color: #F5F5F5;
        z-index: 10;
        opacity:1
}
.attributions{
            position: relative;
            font-size: 0.6em;
            color: #888888;
            text-align:right;
            margin-top: 5px;
            margin-bottom: 0px;
            margin-right: 10px
    }
.olControlPanZoomBar div {
    font-size: 1px;
    border: 1px solid #AAAAAA;
    -moz-border-radius:6px;
    border-radius:6px;
    z-index: 1004
}
.olButton {
    z-index: 1004
}
#zoom{
    position: absolute;
    top:0px;
    left: 16px;
    font-size: 0.75em;
    color: #050505;
    width: 24px;
    height: 11px;
    padding-top: 0px;
    text-align: center;
    vertical-align: center;
    -moz-border-radius:6px;
    border-radius:6px;
    border: 1px solid #AAAAAA;
    background-color: #F5F5F5;
    opacity: 0.5;
}
#right-container{
    position: absolute;
    bottom:16px;
    right: 16px;
    width: 50px;
}

	#sideBar{
	    position: absolute;
	    right: 0px;
	    height: 200px;
	    width: 400px;
	    bottom: 60px;
	    background-color:#EEE; /*fallback*/
	    background-color: rgba(245,245,245,0.5);
	    -moz-border-radius:6px;
	    border-radius:6px;
	    border: 1px solid #aaaaaa;
	    display: none;
	    overflow: auto;
	}
		#sideBarContent{
			font-size: 0.8em;
			color: #444;
			background-color:#FDFDFD;
			opacity:1;
			height:160px;
			width: 370px;
			margin-top: 5px;
			margin-bottom: 5px;
			margin-left: 5px;
			margin-right:5px;
			padding-left:10px;
			padding-right:10px;
			overflow: auto;
			position: absolute
		}
	.sideBarHeader{
		top:0px;left:0px;right:0px;height:24px;position:relative;
		margin-left: 5px;
		background-color:#EEE; /*fallback*/
		background-color: rgba(245,245,245,0.2);
		color: #444444;
		font-weight: 600;
		font-size: 0.82em;
		line-height: 14px
	}
	        #sideBarTitle{
	                float: left;
	                position:relative;
	                top:0px
	        }
	#MainBlock{
	    position: absolute;
	    right: 0px;
/*
	    height: 175px;
*/
	    width: 400px;
	    bottom: 0px;
	    background-color:#EEE; /*fallback*/
	    background-color: rgba(245,245,245,0.4);
	    -moz-border-radius:6px;
	    border-radius:6px;
	    border: 1px solid #aaaaaa;
	    overflow: none;
	}
		#MenuBlock{
		        opacity:1;
		        height:86px;
				width: 390px;
		        margin-top: 2px;
		        margin-bottom: 0px;
		        margin-left: 2px;
		        margin-right:5px;
		        overflow: auto;
		        position: relative
		}
		#MenuVerticalRight{
			position: absolute;
			left: 35px;
			top: 0px;
			width:355px;
			margin-top: 2px;
		}
		#MenuIcons{
		background-color:#FDFDFD;
		height: 30px;
		width:355px;
	    -moz-border-radius:6px;
	    border-radius:6px;
	    margin-top:2px;
	    margin-bottom:5px;
		}
		.IconBarVertical{
			position: absolute;
			left: 0px;
			top: 0px;
			width: 30px;
		}
		#TitleBlock{
		        opacity:1;
		        height:86px;
				width: 390px;
		        margin-top: 0px;
		        margin-bottom: 5px;
		        margin-left: 2px;
		        margin-right:5px;
		        overflow: auto;
		        position: relative
		}
		#TitleVerticalRight{
		width:355px;
		height:80px;
	    background-color:#FDFDFD;
	    -moz-border-radius:6px;
	    border-radius:6px;
		position: absolute;
		left: 35px;
		top: 0px;
		margin-top: 5px;
		}

#searchDiv{
	display: none;
	position: absolute;
	bottom: 30px;
	right: 410px;
	width: 92px;
    background-color:#EEE; /*fallback*/
    background-color: rgba(245,245,245,0.4);
    -moz-border-radius:6px;
    border-radius:6px;
    border: 1px solid #aaaaaa;
}

#search_input{
	border: 1px solid #CCCCCC;
	font-size: 0.8em;
	width: 80px;
	margin-left: 5px;
	margin-right: 5px;
	margin-top: 2px;
	margin-bottom: 2px;
}

#attributions{
    position: absolute;
/*
    width: 100%;
*/
    -moz-border-radius:6px;
    border-radius:6px;
    bottom:0px;
    left: 0px;
    font-size: 0.5em;
    background-color:#EEE; /*fallback*/
    background-color: rgba(245,245,245,0.3);
}

#helper-centering{
    position: absolute;
    top: 5px;
    width: 100%;
    z-index: 1000;
    height:2px;
}
#helper{
    position: relative;
    margin-left: auto;
    margin-right: auto;
    /*text-align: center;*/
    padding-top: 3px;
    width: 220px;
    -moz-border-radius:6px;
    border-radius:6px;
    border: 1px solid #aaaaaa;
    background-color:#EEE; /*fallback*/
    background-color: rgba(245,245,245,0.7);}
#waiter{
    position: relative;
    margin-left: auto;
    margin-right: auto;
    /*text-align: center;*/
    padding-top: 250px;
    width: 50px;
}
#print-settings{
    position: relative;
    margin-left: auto;
    margin-right: auto;
    /*text-align: center;*/
    padding-top: 3px;
    width: 220px;
    -moz-border-radius:6px;
    border-radius:6px;
    border: 1px solid #aaaaaa;
    background-color:#EEE; /*fallback*/
    background-color: rgba(245,245,245,0.7);}
#catcher{
    position: relative;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    padding-top: 3px;
    width: 350px;
    font-size: 0.9em;
    font-weight: 300;
    /*height: 26px;*/
    -moz-border-radius:6px;
    border-radius:6px;
    border: 1px solid #aaaaaa;
    background-color:#EEE; /*fallback*/
    background-color: rgba(245,245,245,0.7);}
#zoomin-helper{
    position: relative;
    margin: 5px;
    font-size: 0.95em;
    color: #444444;
}
#routing{
        padding-top: 10px;
}

#permalink{
    position: absolute;
    bottom: 0px;
    font-size: 0.8em;
    right: 200px;
}
.box {
        position: relative;
        display: block;
        padding: 2px;
        margin: 5px;
        line-height:100%;
        text-align: center;
        background-color: #FFFFFF;
        opacity:0.8;
        -moz-border-radius:5px; /* Firefox */
        border-radius:5px;
        border: 1px solid #888888;
}
/*					Piste list						 */
.pisteListButton{
    font-size: 1.3em;
	background-color:#FFFFFF;
	border: 0px solid grey;
	padding: 2px;
	margin: 0px;
	-moz-border-radius:4px;
	border-radius:4px;
}
.pisteListButton:hover{
	background-color:#DDDDDD;
}
.pisteListButton:active{
	background-color:#CCCCCC;
}
.pisteListElement{
	background-color:#EEEEEE;
	margin: 2px;
	padding:2px;
}
.sitesListElement{
	padding:6px;
}
.pisteElement{}
.inRouteElement{
  font-size: 1.1em;
  font-style:oblique;
}
.inSiteElement{
  font-size: 1.1em;
  font-style:oblique;
}

.Button {
    background-color:#FDFDFD;
	border-style:solid;
	border-width:1px;
	border-color: #ccc;
	padding: 1px;
	margin: 2px;
	-moz-border-radius:5px;
	border-radius:5px;
}
.Button:hover{
    background-color:#DBDBDB;
}
.Button:active{
    background-color:#E65B3F;
}
.iconButton{
	width:22px;
	height:22px
}
.textButton{
	font-weight: 700;
	color: #444444;
	font-size: 0.75em;
	text-decoration: none;
	padding-left: 5px;
	padding-right: 5px;
	padding-top:2px;
	padding-bottom:2px;
	margin-left: 0px;
	margin-right: 0px;
	margin-top: 0px;
	margin-bottom: 1px;
	
}

.closeBox{
	position: relative;
		top:0px;
		left:0px;
		width: 22px;
		height:22px;
/*
		margin: 0px 0px 5px -3px ;
*/
		padding:0px;
		float:left;
		z-index: 1000;
}

